Fixed pagination style on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,23 @@
 body {
-    margin:0;
-    background:#dbad1648;
-    cursor: default;
+    height: 100%;   
+    overflow: hidden;
+    margin: 0px;
+    display: flex;
+    box-sizing: border-box;
 }
 
 .wrapper {
     text-align: center;
-    height: 100vh;
     width: 100vw;
+    height: 100%;  
+    display: flex;
+    flex-direction: column;
 }
 
 .background {
     overflow: hidden;
     background: url(images/background.png) repeat center center; 
     opacity: 90%;
-    justify-content: center;
     animation: animatedBackground 150s infinite alternate;
 }
 
