--- a/src/Components/NavigationBar/NavigationBar.css
+++ b/src/Components/NavigationBar/NavigationBar.css
@@ -3,6 +3,7 @@ body {
 }
 
 .nav-ul {
+    flex-shrink: 0;
     list-style-type: none;
     margin: 0;
     padding: 0;
