--- a/src/Pages/NewsPage/HotNewsSection/HotNewsElement/HotNewsElement.css
+++ b/src/Pages/NewsPage/HotNewsSection/HotNewsElement/HotNewsElement.css
@@ -59,7 +59,7 @@ img {
 }
 
 .post-wrapper .post-title a {
-    overflow-y: hidden;
+    overflow: hidden;
     position: relative;
     line-height: 20px;
     text-overflow: ellipsis;
