--- a/src/Pages/NewsPage/NewsPage.css
+++ b/src/Pages/NewsPage/NewsPage.css
@@ -1,13 +1,13 @@
 .news-page-wrapper {
-    height: 86%;
     width: 100%;
 	overflow-x: hidden;
 	background-color: rgb(202, 202, 202);
 	opacity: 0.8;
+	flex-grow: 1;
+    overflow-y: auto;
 }
 
 .news-page-pagination {
-	height: 9%;
 	background-color: darkgray;
 	border-top: black 1px solid;
 	display: flex;
@@ -23,11 +23,7 @@
 	border: black 1px solid;
 }
 
-@media screen and (max-height: 500px) {
-	.news-page-wrapper {
-		height: 76%;
-	}
-}
+
 
 /* #news-form::-webkit-scrollbar-track
 {
